// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders body1 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 16,
      "fontWeight": "300",
      "letterSpacing": 0.5,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders body2 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "300",
      "letterSpacing": 0.25,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders button 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "600",
      "letterSpacing": 0.75,
      "opacity": 1,
    }
  }
>
  HELLO
</Text>
`;

exports[`renders button empty 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "600",
      "letterSpacing": 0.75,
      "opacity": 1,
    }
  }
>
  
</Text>
`;

exports[`renders caption 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 12,
      "fontWeight": "300",
      "letterSpacing": 0.4,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders correctly 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "300",
      "letterSpacing": 0.25,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders empty 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "300",
      "letterSpacing": 0.25,
      "opacity": 1,
    }
  }
>
  
</Text>
`;

exports[`renders h1 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 48,
      "fontWeight": "100",
      "letterSpacing": -1.5,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders h2 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 30,
      "fontWeight": "100",
      "letterSpacing": -0.5,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders h3 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 24,
      "fontWeight": "300",
      "letterSpacing": 0,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders h4 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 17,
      "fontWeight": "300",
      "letterSpacing": 0.25,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders h5 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 12,
      "fontWeight": "300",
      "letterSpacing": 0,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders h6 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 10,
      "fontWeight": "600",
      "letterSpacing": 0.15,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders overline 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 10,
      "fontWeight": "300",
      "letterSpacing": 1.5,
      "opacity": 1,
    }
  }
>
  HELLO
</Text>
`;

exports[`renders subtitle1 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 16,
      "fontWeight": "300",
      "letterSpacing": 0.15,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;

exports[`renders subtitle2 1`] = `
<Text
  style={
    Object {
      "color": "hsl(0, 0%, 0%)",
      "fontSize": 14,
      "fontWeight": "600",
      "letterSpacing": 0.1,
      "opacity": 1,
    }
  }
>
  hello
</Text>
`;
